Add build status